--- a/zeiterfassung/package.json
+++ b/zeiterfassung/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "remixicon": "^4.6.0"
   },
   "devDependencies": {
